--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             </button>
             
             <ul class="nav__menu" id="nav-menu" role="menubar">
-                <li role="none"><a href="#home" role="menuitem" class="nav__link">Home</a></li>
-                <li role="none"><a href="#challenges" role="menuitem" class="nav__link">Challenges</a></li>
-                <li role="none"><a href="#solutions" role="menuitem" class="nav__link">Solutions</a></li>
-                <li role="none"><a href="#about" role="menuitem" class="nav__link">About</a></li>
-                <li role="none"><a href="#contact" role="menuitem" class="nav__link">Contact</a></li>
+                <li><a href="#home" class="nav__link">Home</a></li>
+                <li><a href="#challenges" class="nav__link">Challenges</a></li>
+                <li><a href="#solutions"  class="nav__link">Solutions</a></li>
+                <li><a href="#about"  class="nav__link">About</a></li>
+                <li><a href="#contact"  class="nav__link">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -287,4 +287,5 @@
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
