--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <a href="#main-content" class="skip-link" aria-label="Skip to main content">Skip to main content</a>
 
     <!-- Header -->
-    <header role="banner" class="header" id="header">
-        <nav role="navigation" class="nav container" aria-label="Main navigation">
+    <header  class="header" id="header">
+        <nav class="nav container" aria-label="Main navigation">
             <div class="nav__brand">
                 <a href="#home" class="nav__logo" aria-label="Catalyst Home">
                     <span class="nav__logo-text">CATALYST</span>
@@ -289,3 +289,4 @@
 </body>
 
 </html>
+
