--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             </svg>
                         </div>
                         <h3 class="contact-item__title">Website</h3>
-                        <a href="https://www.catalyst.com" class="contact-item__link" aria-label="Visit our website">
+                        <a href="catalys.netlify.app" class="contact-item__link" aria-label="Visit our website">
                             www.catalyst.com
                         </a>
                     </div>
@@ -289,4 +289,5 @@
 </body>
 
 </html>
+
 
